# RevanScript-RVS-Project

./: README.md
RevanScript-(RVS-1.0)/: CMakeLists.txt  RevanScript  executable.sh  main.c  main.rvs  rvsbuf.c  rvsbuf.h  rvsctl.c  rvsctl.h  rvsio.c  rvsio.h  rvsmem.c  rvsmem.h
RevanScript-(RVS-1.0)/docs/: index.html
RevanScript-(RVS-1.0)/documentation/css/: style.css
RevanScript-(RVS-1.0)/include/: rvsbuf.h  rvsctl.h  rvsflg.h  rvsio.h  rvsmem.h  rvsprs.h
RevanScript-(RVS-1.0)/scr/: rvsio.c  rvsmem.c
RevanScript-(RVS-1.0)/src/: main.c  rvsbuf.c  rvsctl.c  rvsflg.c  rvsio.c  rvsmem.c  rvsprs.c
RevanScript-(RVS-1.0)/test/: main.rvs  test0.rvs  test1.rvs  test2.rvs  test3.rvs  test4.rvs
docs/: CNAME
